<resources>
    <string name="app_name">Quiz Educational App</string>
    <string name="language">Chose language</string>
    <string name="newGame">New game</string>
    <string name="endGame">End game</string>
    <string name="educationalQuiz">Educational quiz</string>
    <string name="motivationalQuiz">Motivational quiz</string>
    <string name="editField">Please enter your name.</string>
    <string name="welcomeText">If you want to participate in presented quizzes please supply your
    nick name and click the button. </string>
    <string name="question1">1. Are you phenomenal?</string>
    <string name="question2">2. Are you fabulous?</string>
    <string name="question3">3. Are you awesome?</string>
    <string name="question4">4. Are you terrific?</string>
    <string name="question5">5. Are you marvelous?</string>
    <string name="question11">1. What is the fastest?</string>
    <string name="question1answer1">Hennessey Venon GT.</string>
    <string name="question1answer2">Information send by neurons.</string>
    <string name="question1answer3">Internet broadband.</string>
    <string name="question12">2. Which is longer?</string>
    <string name="question2answer1">Distance around the Earth.</string>
    <string name="question2answer2">Total length of blood vessels in brain.</string>
    <string name="question2answer3">Square of number 300.</string>
    <string name="question13">3. How many neurons there are in human brain.</string>
    <string name="question3answer1">more than the stars in Milky Way.</string>
    <string name="question3answer2">86 billion neurons.</string>
    <string name="question3answer3">multiply of 98763 and 66789.</string>
    <string name="question14">4. Which of below sentences are true.</string>
    <string name="question4answer1">Human brain can eat itself.</string>
    <string name="question4answer2">The brain in human head is the only brain.</string>
    <string name="question4answer3">Human brain can deceive owners.</string>
    <string name="question15">5. What is on an image below.</string>
    <string name="freeText">Please type the word.</string>
    <string name="yes">Yes</string>
    <string name="maybe">Maybe</string>
    <string name="no">No</string>
    <string name="resultButton">Show results</string>
    <string name="lastResults">%1$s.\nYou have answered %2$d of 5 questions correctly.</string>
    <string name="option1">.\nYou checked too many boxes, you are trying too much.</string>
    <string name="option2">.\nYou checked too little boxes, keep trying.</string>
    <string name="option3">.\nYou are truly magnific.\nYou are a winner!!.</string>
    <string name="option4">.\nYou can join the dark side.</string>
    <string name="option5">.\nYou just can not win.</string>
    <string name="chosenYes">That is what your mama told ya.</string>
    <string name="chosenNo">Pity you!</string>
    <string name="chosenMaybe">Maybe you are a baby.</string>
    <string name="correctAnswer">This is correct answer.</string>
</resources>
