<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                style="@style/questions_style"
                android:layout_marginTop="12dp"
                android:text="@string/question11" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/brain0" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    style="@style/checkbox_style"
                    android:text="@string/question1answer1" />

                <RadioButton
                    android:id="@+id/question1Correct"
                    style="@style/checkbox_style"
                    android:text="@string/question1answer2"
                    android:onClick="showAnswer"/>

                <RadioButton
                    style="@style/checkbox_style"
                    android:text="@string/question1answer3" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/questions_style"
                android:text="@string/question12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/brain11" />

                <RadioGroup style="@style/radioGroup">

                    <RadioButton
                        style="@style/checkbox_style"
                        android:text="@string/question2answer1" />

                    <RadioButton
                        android:id="@+id/question2Correct"
                        style="@style/checkbox_style"
                        android:onClick="showAnswer"
                        android:text="@string/question2answer2" />

                    <RadioButton
                        style="@style/checkbox_style"
                        android:text="@string/question2answer3" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                style="@style/questions_style"
                android:layout_marginTop="12dp"
                android:text="@string/question13" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/brain12" />

            <RadioGroup style="@style/radioGroup">

                <RadioButton
                    style="@style/checkbox_style"
                    android:text="@string/question3answer1" />

                <RadioButton
                    android:id="@+id/question3Correct"
                    android:onClick="showAnswer"
                    style="@style/checkbox_style"
                    android:text="@string/question3answer2" />

                <RadioButton
                    style="@style/checkbox_style"
                    android:text="@string/question3answer3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                style="@style/questions_style"
                android:layout_marginTop="12dp"
                android:text="@string/question14" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/brain13" />

            <LinearLayout
                style="@style/radioGroup">

                <CheckBox
                    android:id="@+id/question4Correct1"
                    style="@style/checkbox_style"
                    android:text="@string/question4answer1"
                    android:onClick="showAnswer"/>

                <CheckBox
                    style="@style/checkbox_style"
                    android:id="@+id/question4Wrong"
                    android:text="@string/question4answer2" />

                <CheckBox
                    style="@style/checkbox_style"
                    android:id="@+id/question4Correct2"
                    android:text="@string/question4answer3"
                    android:onClick="showAnswer"            />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                style="@style/questions_style"
                android:layout_marginTop="12dp"
                android:text="@string/question15" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/thebrain" />

            <EditText
                android:id="@+id/edit_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/freeText" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/test2"
                style="@style/buttonsQuiz"
                android:text="@string/resultButton" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>