<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context="com.dmns.quizeducationalapp.OneActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        style="@style/welcomeText"
        android:text="@string/welcomeText" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/editField" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/brain" />

    <Button
        android:id="@+id/educationalButton"
        style="@style/buttons"
        android:onClick="goToEducational"
        android:text="@string/educationalQuiz" />

    <Button
        android:id="@+id/motivationalButton"
        style="@style/buttons"
        android:onClick="goToMotivational"
        android:text="@string/motivationalQuiz" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/brainop" />
</LinearLayout>
</ScrollView>



